--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
       <h1 class="header-title">no focus</h1>
       <div class="header-block">
-        <p class="header-block-title">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться,<br> особенно когда очень надо</p>
+        <p class="header-block-title">Что делать, когда не можешь делать&nbsp;ничего</br>Или почему нам так сложно сконцентрироваться,<br> особенно, когда&nbsp;очень надо</p>
       </div>
     </header>
     <main class="main__content">
